<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informacion">

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registrarse3"
        android:layout_width="92dp"
        android:layout_height="42dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="28dp"
        android:hint="@string/Botonlogin"
        android:onClick="Login"
        android:text="@string/Botonlogin"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Botonlogin" />

    <Button
        android:id="@+id/btn_categorias3"
        android:layout_width="97dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Botoncategorias"
        android:onClick="Categorias"
        android:text="Categorias"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_contactenos3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner4" />

    <Button
        android:id="@+id/btn_contactenos3"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:onClick="Contactenos"
        android:text="@string/Botoncontactenos"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_informacion3"
        app:layout_constraintTop_toBottomOf="@+id/spinner4" />

    <Button
        android:id="@+id/btn_informacion3"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Botoninformacion"
        android:onClick="Informacion"
        android:text="Informacion"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner4" />
</android.support.constraint.ConstraintLayout>